client/src/index.css
:root {
  --cell-size: 7vmin;
  --cell-margin: 1vmin;
  --cell-total-size: calc(var(--cell-size) + 2 * var(--cell-margin));
  --main-color: white;
  --secondary-color: black;
}

.dark {
  --main-color: black;
  --secondary-color: white;
}

body {
  margin: 0;
}

.button {
  height: 10vmin;
  min-width: 7vmin;
  margin: 1vmin;
}

.button,
.cell {
  border: 1px solid #999;
  float: left;
  font-size: 100%;
  font-weight: bold;
  line-height: 100%;
  padding: 0;
  text-align: center;
  box-sizing: border-box;
  border-radius: 10%;
  position: relative;
}


.cell {
  height: var(--cell-dimension);
  width: var(--cell-dimension);
  font-size: var(--cell-dimension);
}

.cell .letter {
  z-index: 2;
  position: relative;
}

.button:hover {
  cursor: pointer;
}

.game {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: var(--main-color);
  color: var(--secondary-color);
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.keyboard {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.break {
  flex-basis: 100%;
}

.red {
  background-color: red;
  color: black;
}

.green {
  background-color: green;
  color: black;
}

.yellow {
  background-color: yellow;
  color: black;
}

.black {
  background-color: #222222;
  color: white;
}

.white {
  background-color: white;
  color: black;
}

.guessesinner {
  position: relative;
}

.guessescontainer {
  width: 100%;
  overflow: hidden;
  display: flex;
  justify-content: center;
  flex: 1;
}

.message {
  position: absolute;
  top: calc(var(--cell-total-size) * 3.5);
  z-index: 10;
  width: fit-content;
  margin: 0 auto;
  text-align: center;
  padding: calc(2 * var(--cell-margin));
  border-radius: 10px;
  opacity: 1;
  left: 0;
  right: 0;
}

.hidemessage {
  opacity: 0;
  transition: 1s;
}

.gameover-message {
	color: white;
	font-size: 200%;
}

.dictbutton {
  border: 1px solid;
  position: absolute;
  right: calc(var(--cell-total-size) * -1);
  border-radius: 50%;
  width: var(--cell-size);
  height: var(--cell-size);
  line-height: var(--cell-size);
  margin: var(--cell-margin);
  font-size: var(--cell-size);
  text-align: center;
  cursor: pointer;
  box-sizing: border-box;
}

.popup {
  position: absolute;
  top: 10%;
  max-width: 80%;
  margin: auto;
  background-color: var(--main-color);
  z-index: 20;
  border-radius: 5vmin;
  border: 5px solid var(--secondary-color);
  min-height: calc(var(--cell-size) * 2);
  padding: var(--cell-size);
}

.popup table {
	width: 100%;
	border-collapse: collapse;
}

.lobby-game:hover {
	cursor: pointer;
	background-color: #9090ff;
}

.popup td {
	min-width: 4vmin;
}

.own-game-lobby {
	color: grey;
}

.lobby {
	border-top: 1px solid var(--secondary-color);
	text-align: center;
	font-weight: bold;
	font-size: 3vmin;
}

.lobby-title {
	border-bottom: 1px solid var(--secondary-color);
	font-size: 4vmin;
}

.overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: #808080;
  z-index: 19;
  opacity: 0.5;
}

.spinner {
  width: 3vmin;
  height: 3vmin;
  border: 1vmin solid #a0a0a0;
  border-top-color: #202020;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

header {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-bottom: 1px solid var(--secondary-color);
  align-items: center;
  margin-bottom: 1vmin;
}

.headerleft {
  text-align: left;
  width: 30%;
}

.headerright {
  width: 30%;
  text-align: right;
}

.headertitle {
  font-size: 40px;
  font-family: Tahoma, sans-serif;
}

.setting {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
  margin-bottom: 1vh;
  font-size: 4vmin;
}

.setting select {
	font-size: 3vmin;
	text-align: right;
	width: 21vmin;
}

.start-buttons {
	text-align: center;
}

.start-buttons button {
	margin: 2vmin;
	margin: 4vmin 2vmin;
	font-size: 3vmin;
}

.gameover-message {
	color: var(--secondary-color);
}

.slider {
  width: 10vmin;
  height: 4vmin;
  background-color: #303030;
  border-radius: 5vmin;
  position: relative;
}

.slider:before {
  position: absolute;
  left: 1vmin;
  top: 0.5vmin;
  width: 3vmin;
  height: 3vmin;
  background-color: #909090;
  border-radius: 50%;
  content: "";
}

.game-info-button {
	border-radius: 50%;
	z-index: 20;
	position: relative;
	font-size: 5vmin;
	width: 5vmin;
	height: 5vmin;
	display: inline-flex;
	align-items: center;
	justify-content: center;
}

.title {
	min-width: 70vmin;
}

.switch input {
  display: none;
}

input:checked + .slider:before {
  transform: translateX(5vmin);
  background-color: #a0ffff;
}

.switch {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 10vmin;
}

.opponent-color {
	width: 20%;
	height: 20%;
	position: absolute;
	right: 5%;
	bottom: 5%;
	border-radius: 50%;
	z-index: 1;
	border: 1px solid white;
}

.removewords {
  animation: removal 1s forwards;
}

@keyframes removal {
  0% {
    top: 0;
  }
  100% {
    top: calc(100% / var(--amt-guesses) * var(--words-to-remove) * -1);
  }
}

.timer {
	height: 1vh;
	animation: runtimer calc(1s * var(--duration)) linear forwards;
	transform-origin: left center;
}

.paused {
	animation-play-state: paused;
}

@keyframes runtimer {
	from {
		background-color: green;
	}
	to {
		background-color: red;
		transform: scaleX(0);
	}
}

